[package]
name = "lua-js"
version = "1.1.0"
edition = "2021"
description = "The Lua runtime for Node.js."
authors = ["MikuroXina"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lua = "0.0.10"
napi = "1"
napi-derive = "1"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
