[package]
name = "lua-js"
version = "0.1.0"
edition = "2021"
description = "The Lua runtime for Node.js."
authors = ["MikuroXina"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
mlua = { version = "0.7.0", features = ["lua54", "vendored"] }
napi = "1"
napi-derive = "1"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
